@@ -44,7 +44,7 @@ extern "C" {
 
 #define LIBTIMIDITY_VERSION_MAJOR 0L
 #define LIBTIMIDITY_VERSION_MINOR 2L
-#define LIBTIMIDITY_PATCHLEVEL    2L
+#define LIBTIMIDITY_PATCHLEVEL    3L
 
 #define LIBTIMIDITY_VERSION               \
         ((LIBTIMIDITY_VERSION_MAJOR<<16)| \
